[S] Fix header overflow

--- a/src/pages/overall/overall-course/course-head/course-head.scss
+++ b/src/pages/overall/overall-course/course-head/course-head.scss
@@ -128,6 +128,13 @@
 
     .header
     {
+        .title
+        {
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+
         .subtitle
         {
             font-size: 12px;
